# json-to-parquet-rs

./: (Eng) BUILD.md  (Eng) README.md  .gitignore  BUILD.md  README.md  build.md  generate_sample_data.py  json_to_parquet.py
.github/workflows/: build-wheels.yml
rust_json_to_parquet/: Cargo.toml  README.md  USAGE.md  pyproject.toml
rust_json_to_parquet/python/json_to_parquet_rs/: __init__.py  __init__.pyi
rust_json_to_parquet/src/: converter.rs  json_parser.rs  lib.rs  parser.rs  reference.rs
rust_json_to_parquet/src/json_to_parquet_rs/: __init__.py  __init__.pyi
rust_json_to_parquet/test/: lookup_table.parquet  sample_input.json
test/: example_schema.yaml  lookup_table.parquet
tests/: test_core.py
